--- a/index.html
+++ b/index.html
@@ -3,225 +3,183 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Cybersecurity Portfolio</title>
+<title>Tanaka Shumba Portfolio</title>
 <style>
-    /* General Styles */
-    body {
-        margin: 0;
-        font-family: 'Arial', sans-serif;
-        background-color: #000;
-        color: #fff;
-        overflow-x: hidden;
-    }
-    header {
-        padding: 40px 20px;
-        text-align: center;
-        position: relative;
-        background: linear-gradient(to right, #000, #0a0a0a);
-    }
-    header h1 {
-        font-size: 2.8em;
-        color: #00ff7f;
-        margin: 0;
-    }
-    nav {
-        margin-top: 15px;
-    }
-    nav a {
-        text-decoration: none;
-        color: #00dfff;
-        margin: 0 15px;
-        font-weight: bold;
-        transition: color 0.3s;
-    }
-    nav a:hover {
-        color: #00ff7f;
-    }
-    section {
-        padding: 60px 20px;
-        max-width: 1000px;
-        margin: auto;
-        position: relative;
-        z-index: 2;
-    }
-    /* About Section */
-    #about {
-        display: flex;
-        flex-wrap: wrap;
-        align-items: center;
-        gap: 20px;
-    }
-    #about img {
-        width: 250px;
-        border-radius: 15px;
-        box-shadow: 0 0 15px #00ff7f;
-    }
-    #about div {
-        flex: 1;
-    }
-    #about h2 {
-        color: #00ff7f;
-        font-size: 2em;
-        margin-bottom: 15px;
-    }
-    /* Projects Section */
-    #projects h2 {
-        color: #00ff7f;
-        margin-bottom: 25px;
-    }
-    .project-grid {
-        display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-        gap: 20px;
-    }
-    .project {
-        background: #111;
-        border: 2px solid #00ff7f;
-        border-radius: 10px;
-        padding: 20px;
-        transition: transform 0.3s, box-shadow 0.3s;
-    }
-    .project:hover {
-        transform: translateY(-5px);
-        box-shadow: 0 0 20px #00ff7f;
-    }
-    .project h3 {
-        color: #00dfff;
-        margin-top: 0;
-    }
-    .project p {
-        font-size: 0.95em;
-        line-height: 1.4em;
-    }
-    .project a {
-        display: inline-block;
-        margin-top: 10px;
-        text-decoration: none;
-        color: #00ff7f;
-        font-weight: bold;
-    }
-    /* Contact Section */
-    #contact h2 {
-        color: #00ff7f;
-        margin-bottom: 25px;
-    }
-    #contact form {
-        display: flex;
-        flex-direction: column;
-        gap: 15px;
-        max-width: 500px;
-        margin: auto;
-    }
-    #contact input, #contact textarea {
-        padding: 10px;
-        border-radius: 5px;
-        border: none;
-        font-size: 1em;
-    }
-    #contact button {
-        padding: 10px;
-        background: #00ff7f;
-        border: none;
-        font-weight: bold;
-        cursor: pointer;
-        transition: background 0.3s;
-    }
-    #contact button:hover {
-        background: #00dfff;
-    }
-    footer {
-        text-align: center;
-        padding: 20px;
-        color: #666;
-    }
-    /* Background lines animation */
-    .bg-lines {
-        position: fixed;
-        top: 0; left: 0;
-        width: 100%; height: 100%;
-        pointer-events: none;
-        z-index: 1;
-    }
-    .line {
-        position: absolute;
-        width: 2px;
-        height: 100%;
-        background: rgba(0, 255, 127, 0.1);
-        animation: move 6s linear infinite;
-    }
-    @keyframes move {
-        0% { transform: translateY(-100%); }
-        100% { transform: translateY(100%); }
-    }
+  body {
+    margin: 0;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    background: #0a0a0a;
+    color: #e0e0e0;
+  }
+
+  header {
+    background-color: #0d0d0d;
+    padding: 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-bottom: 2px solid #00ff7f;
+  }
+
+  header h1 {
+    margin: 0;
+    color: #00ff7f;
+  }
+
+  nav a {
+    margin-left: 20px;
+    text-decoration: none;
+    color: #00ccff;
+    font-weight: bold;
+  }
+
+  nav a:hover {
+    color: #00ff7f;
+  }
+
+  section {
+    padding: 50px 20px;
+    max-width: 1000px;
+    margin: auto;
+  }
+
+  .about-me img {
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    float: left;
+    margin-right: 30px;
+    border: 2px solid #00ff7f;
+  }
+
+  .about-me h2 {
+    color: #00ff7f;
+  }
+
+  .projects {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 20px;
+  }
+
+  .project-card {
+    background-color: #111;
+    border: 2px solid #00ff7f;
+    padding: 20px;
+    border-radius: 10px;
+    transition: transform 0.2s, box-shadow 0.2s;
+  }
+
+  .project-card:hover {
+    transform: translateY(-5px);
+    box-shadow: 0 0 15px #00ff7f;
+  }
+
+  .project-card h3 {
+    margin-top: 0;
+    color: #00ccff;
+  }
+
+  .contact a {
+    display: inline-block;
+    margin-right: 20px;
+    padding: 10px 20px;
+    background-color: #00ccff;
+    color: #0a0a0a;
+    text-decoration: none;
+    border-radius: 5px;
+    font-weight: bold;
+    transition: background-color 0.2s;
+  }
+
+  .contact a:hover {
+    background-color: #00ff7f;
+    color: #000;
+  }
+
+  footer {
+    text-align: center;
+    padding: 20px;
+    background-color: #0d0d0d;
+    border-top: 2px solid #00ff7f;
+    color: #888;
+  }
+
 </style>
 </head>
 <body>
 
-<div class="bg-lines">
-    <div class="line" style="left:10%; animation-duration:6s;"></div>
-    <div class="line" style="left:25%; animation-duration:8s;"></div>
-    <div class="line" style="left:40%; animation-duration:5s;"></div>
-    <div class="line" style="left:60%; animation-duration:7s;"></div>
-    <div class="line" style="left:75%; animation-duration:6.5s;"></div>
-    <div class="line" style="left:90%; animation-duration:8s;"></div>
-</div>
-
 <header>
-    <h1>Cybersecurity Portfolio</h1>
-    <nav>
-        <a href="#about">About Me</a>
-        <a href="#projects">Projects</a>
-        <a href="#contact">Contact</a>
-    </nav>
+  <h1>Tanaka Shumba</h1>
+  <nav>
+    <a href="#about">About Me</a>
+    <a href="#projects">Projects</a>
+    <a href="#contact">Contact</a>
+  </nav>
 </header>
 
-<section id="about">
-    <img src="images/about-me.jpg" alt="Profile Picture">
-    <div>
-        <h2>Hi there!</h2>
-        <p>Welcome to my cybersecurity portfolio! Here I showcase my projects, skills, and ambitions in cybersecurity. I focus on threat detection, secure software development, cloud and network security. Explore my projects and see how I can contribute to your team.</p>
-    </div>
+<section id="about" class="about-me">
+  <img src="images/about-me.jpg" alt="Tanaka Shumba">
+  <h2>Hi there</h2>
+  <p>Welcome to my portfolio! Here, I showcase my cybersecurity projects, highlighting my skills in threat detection, penetration testing, and network security. Each project demonstrates practical solutions and innovative approaches to modern security challenges.</p>
+  <p>Beyond these projects, I am passionate about advancing in the cybersecurity field, constantly learning, and contributing to securing digital landscapes. This portfolio reflects both my technical expertise and my ambition to make an impact in the cybersecurity industry.</p>
 </section>
 
 <section id="projects">
-    <h2>Projects</h2>
-    <div class="project-grid">
-        <div class="project">
-            <h3>Malware Analyzer</h3>
-            <p>Python script simulating malware detection techniques.</p>
-            <a href="https://github.com/TanakaShumba/malware-analyzer" target="_blank">View on GitHub</a>
-        </div>
-        <div class="project">
-            <h3>Ethical Hacking Sim</h3>
-            <p>Educational scripts simulating ethical hacking techniques.</p>
-            <a href="https://github.com/TanakaShumba/ethical-hacking-sim" target="_blank">View on GitHub</a>
-        </div>
-        <div class="project">
-            <h3>Cloud Security Checker</h3>
-            <p>Script simulating checking cloud configurations for security issues.</p>
-            <a href="https://github.com/TanakaShumba/cloud-security-checker" target="_blank">View on GitHub</a>
-        </div>
-        <div class="project">
-            <h3>Python Network Scanner</h3>
-            <p>Educational network scanning tool in Python.</p>
-            <a href="https://github.com/TanakaShumba/python-network-scanner" target="_blank">View on GitHub</a>
-        </div>
+  <h2>My Projects</h2>
+  <div class="projects">
+    <div class="project-card">
+      <h3><a href="https://github.com/TanakaShumba/malware-analyzer" target="_blank">Malware Analyzer</a></h3>
+      <p>Python script to simulate analyzing suspicious files and detecting potential malicious behaviors in a controlled environment.</p>
     </div>
+    <div class="project-card">
+      <h3><a href="https://github.com/TanakaShumba/ethical-hacking-sim" target="_blank">Ethical Hacking Sim</a></h3>
+      <p>Python scripts simulating ethical hacking techniques for learning and demonstration purposes.</p>
+    </div>
+    <div class="project-card">
+      <h3><a href="https://github.com/TanakaShumba/cloud-security-checker" target="_blank">Cloud Security Checker</a></h3>
+      <p>Python script to simulate checking cloud service configurations for common security misconfigurations.</p>
+    </div>
+    <div class="project-card">
+      <h3><a href="https://github.com/TanakaShumba/basic-pen-test" target="_blank">Basic Pen Test</a></h3>
+      <p>Simple Python script for educational penetration testing and vulnerability scanning.</p>
+    </div>
+    <div class="project-card">
+      <h3><a href="https://github.com/TanakaShumba/simple-ids" target="_blank">Simple IDS</a></h3>
+      <p>A basic IDS/IPS simulation in Python for detecting and preventing attacks.</p>
+    </div>
+    <div class="project-card">
+      <h3><a href="https://github.com/TanakaShumba/cybersecurity-lab-series" target="_blank">Cybersecurity Lab Series</a></h3>
+      <p>A collection of labs and scripts designed for hands-on cybersecurity learning.</p>
+    </div>
+    <div class="project-card">
+      <h3><a href="https://github.com/TanakaShumba/secure-hospital-system" target="_blank">Secure Hospital System</a></h3>
+      <p>Python-based secure hospital management system focusing on patient data security.</p>
+    </div>
+    <div class="project-card">
+      <h3><a href="https://github.com/TanakaShumba/voip-traffic-analyzer" target="_blank">VoIP Traffic Analyzer</a></h3>
+      <p>Python project that captures and analyzes VoIP RTP packets safely for educational use.</p>
+    </div>
+    <div class="project-card">
+      <h3><a href="https://github.com/TanakaShumba/python-network-scanner" target="_blank">Python Network Scanner</a></h3>
+      <p>Python tool for scanning networks and identifying connected devices and vulnerabilities.</p>
+    </div>
+    <div class="project-card">
+      <h3><a href="https://github.com/TanakaShumba/Healthcare_System" target="_blank">Healthcare System</a></h3>
+      <p>Flask-based healthcare management system to handle appointments, doctors, and payments.</p>
+    </div>
+  </div>
 </section>
 
-<section id="contact">
-    <h2>Contact</h2>
-    <form>
-        <input type="text" placeholder="Your Name" required>
-        <input type="email" placeholder="Your Email" required>
-        <textarea placeholder="Message" rows="5" required></textarea>
-        <button type="submit">Send Message</button>
-        <p>LinkedIn: <a href="https://www.linkedin.com/in/tanakashumba-" target="_blank" style="color:#00dfff;">tanakashumba</a></p>
-    </form>
+<section id="contact" class="contact">
+  <h2>Contact Me</h2>
+  <p>Feel free to reach out via email or LinkedIn:</p>
+  <a href="mailto:tanakashumba04@gmail.com">Email Me</a>
+  <a href="https://www.linkedin.com/in/tanakashumba-" target="_blank">LinkedIn</a>
 </section>
 
 <footer>
-    &copy; 2025 Tanaka Shumba. All rights reserved.
+  © 2025 Tanaka Shumba
 </footer>
 
 </body>
