--- a/index.html
+++ b/index.html
@@ -8,35 +8,22 @@
     /* Reset and basic styling */
     * {margin: 0; padding: 0; box-sizing: border-box; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;}
     body {
-        background-color: black;
-        color: #d9d9d9;
+        background-color: #87CEFA; /* Light blue background */
+        color: #000;
         line-height: 1.6;
         position: relative;
         overflow-x: hidden;
     }
 
-    /* Light blue overlay */
-    body::before {
-        content: "";
-        position: absolute;
-        top: 0; left: 0;
-        width: 100%; height: 100%;
-        background: rgba(173, 216, 230, 0.08);
-        pointer-events: none;
-        z-index: 0;
-    }
-
     header {
         padding: 20px;
         text-align: center;
-        background-color: #000;
-        position: relative;
-        z-index: 1;
+        background-color: #4682B4; /* Slightly darker blue for header */
     }
 
     header h1 {
         font-size: 2.5rem;
-        color: #00ff99;
+        color: #ffffff;
         margin-bottom: 10px;
     }
 
@@ -48,27 +35,25 @@
     }
 
     nav a {
-        color: #00bfff;
+        color: #ffffff;
         text-decoration: none;
         font-weight: bold;
         transition: color 0.3s;
     }
 
-    nav a:hover {color: #00ff99;}
+    nav a:hover {color: #ffeb3b;}
 
     section {
         padding: 50px 20px;
-        position: relative;
-        z-index: 1;
         max-width: 1000px;
         margin: auto;
     }
 
     section h2 {
         font-size: 2rem;
-        color: #00ff99;
+        color: #4682B4;
         margin-bottom: 20px;
-        border-bottom: 2px solid #00bfff;
+        border-bottom: 2px solid #1E90FF;
         display: inline-block;
         padding-bottom: 5px;
     }
@@ -96,8 +81,8 @@
     }
 
     .project-card {
-        background-color: #111;
-        border: 1px solid #00ff99;
+        background-color: #B0E0E6; /* Lighter blue cards */
+        border: 1px solid #1E90FF;
         padding: 15px;
         border-radius: 8px;
         transition: transform 0.3s, box-shadow 0.3s;
@@ -105,17 +90,17 @@
 
     .project-card:hover {
         transform: translateY(-5px);
-        box-shadow: 0 0 20px #00ff99;
+        box-shadow: 0 0 15px #1E90FF;
     }
 
     .project-card h3 {
-        color: #00bfff;
+        color: #1E90FF;
         margin-bottom: 10px;
     }
 
     .project-card p {
         font-size: 0.95rem;
-        color: #d9d9d9;
+        color: #000;
     }
 
     /* Contact Section */
@@ -123,25 +108,23 @@
         display: inline-block;
         margin-right: 20px;
         text-decoration: none;
-        color: #00bfff;
-        border: 1px solid #00bfff;
+        color: #1E90FF;
+        border: 1px solid #1E90FF;
         padding: 8px 12px;
         border-radius: 5px;
         transition: all 0.3s;
     }
 
     .contact-links a:hover {
-        background-color: #00bfff;
-        color: #000;
+        background-color: #1E90FF;
+        color: #fff;
     }
 
     footer {
         text-align: center;
         padding: 20px;
-        background-color: #000;
-        color: #555;
-        position: relative;
-        z-index: 1;
+        background-color: #4682B4;
+        color: #fff;
     }
 
 </style>
