--- a/index.html
+++ b/index.html
@@ -5,25 +5,22 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Tanaka Shumba Portfolio</title>
 <style>
-    /* Reset and basic styling */
-    * {margin: 0; padding: 0; box-sizing: border-box; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;}
+    * { margin: 0; padding: 0; box-sizing: border-box; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;}
     body {
         background-color: #87CEFA; /* Light blue background */
         color: #000;
         line-height: 1.6;
-        position: relative;
-        overflow-x: hidden;
     }
 
     header {
         padding: 20px;
         text-align: center;
-        background-color: #4682B4; /* Slightly darker blue for header */
+        background-color: #4682B4;
     }
 
     header h1 {
         font-size: 2.5rem;
-        color: #ffffff;
+        color: #fff;
         margin-bottom: 10px;
     }
 
@@ -31,11 +28,10 @@
         display: flex;
         justify-content: center;
         gap: 30px;
-        margin-top: 10px;
     }
 
     nav a {
-        color: #ffffff;
+        color: #fff;
         text-decoration: none;
         font-weight: bold;
         transition: color 0.3s;
@@ -51,14 +47,14 @@
 
     section h2 {
         font-size: 2rem;
-        color: #4682B4;
-        margin-bottom: 20px;
-        border-bottom: 2px solid #1E90FF;
+        color: #228B22; /* Green heading */
+        margin-bottom: 15px;
+        border-bottom: 2px solid #228B22;
         display: inline-block;
         padding-bottom: 5px;
     }
 
-    /* About Me Section */
+    /* About Me */
     #about img {
         width: 150px;
         height: 150px;
@@ -73,6 +69,10 @@
         gap: 20px;
     }
 
+    #about-content p {
+        color: #000;
+    }
+
     /* Projects Section */
     .project-grid {
         display: grid;
@@ -81,8 +81,7 @@
     }
 
     .project-card {
-        background-color: #B0E0E6; /* Lighter blue cards */
-        border: 1px solid #1E90FF;
+        background-color: #4682B4; /* Blue card */
         padding: 15px;
         border-radius: 8px;
         transition: transform 0.3s, box-shadow 0.3s;
@@ -94,13 +93,14 @@
     }
 
     .project-card h3 {
-        color: #1E90FF;
-        margin-bottom: 10px;
+        color: #228B22; /* Green title */
+        margin-bottom: 5px;
+        font-size: 1.2rem;
     }
 
     .project-card p {
-        font-size: 0.95rem;
-        color: #000;
+        font-size: 0.9rem;
+        color: #fff; /* Description in white */
     }
 
     /* Contact Section */
@@ -108,15 +108,15 @@
         display: inline-block;
         margin-right: 20px;
         text-decoration: none;
-        color: #1E90FF;
-        border: 1px solid #1E90FF;
+        color: #228B22;
+        border: 1px solid #228B22;
         padding: 8px 12px;
         border-radius: 5px;
         transition: all 0.3s;
     }
 
     .contact-links a:hover {
-        background-color: #1E90FF;
+        background-color: #228B22;
         color: #fff;
     }
 
