--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
 <style>
     * { margin: 0; padding: 0; box-sizing: border-box; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;}
     body {
-        background-color: #87CEFA; /* Light blue background */
-        color: #000;
+        background-color: #0d1b2a; /* Dark blue background */
+        color: #fff;
         line-height: 1.6;
     }
 
     header {
         padding: 20px;
         text-align: center;
-        background-color: #4682B4;
+        background-color: #1b263b;
     }
 
     header h1 {
@@ -37,7 +37,7 @@
         transition: color 0.3s;
     }
 
-    nav a:hover {color: #ffeb3b;}
+    nav a:hover { color: #32cd32; } /* Lime green on hover */
 
     section {
         padding: 50px 20px;
@@ -47,19 +47,19 @@
 
     section h2 {
         font-size: 2rem;
-        color: #228B22; /* Green heading */
+        color: #32cd32; /* Lime green heading */
         margin-bottom: 15px;
-        border-bottom: 2px solid #228B22;
+        border-bottom: 2px solid #32cd32;
         display: inline-block;
         padding-bottom: 5px;
     }
 
-    /* About Me */
     #about img {
         width: 150px;
         height: 150px;
         border-radius: 50%;
         margin-right: 20px;
+        border: 2px solid #32cd32;
     }
 
     #about-content {
@@ -70,10 +70,9 @@
     }
 
     #about-content p {
-        color: #000;
+        color: #fff;
     }
 
-    /* Projects Section */
     .project-grid {
         display: grid;
         grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
@@ -81,20 +80,20 @@
     }
 
     .project-card {
-        background-color: #4682B4; /* Blue card */
-        padding: 15px;
-        border-radius: 8px;
+        background-color: #1b263b; /* Slightly lighter than background */
+        padding: 20px;
+        border-radius: 10px;
         transition: transform 0.3s, box-shadow 0.3s;
     }
 
     .project-card:hover {
         transform: translateY(-5px);
-        box-shadow: 0 0 15px #1E90FF;
+        box-shadow: 0 0 15px #32cd32;
     }
 
     .project-card h3 {
-        color: #228B22; /* Green title */
-        margin-bottom: 5px;
+        color: #32cd32; /* Lime green title */
+        margin-bottom: 10px;
         font-size: 1.2rem;
     }
 
@@ -103,27 +102,35 @@
         color: #fff; /* Description in white */
     }
 
-    /* Contact Section */
+    .project-card a {
+        color: #32cd32;
+        text-decoration: none;
+    }
+
+    .project-card a:hover {
+        text-decoration: underline;
+    }
+
     .contact-links a {
         display: inline-block;
         margin-right: 20px;
         text-decoration: none;
-        color: #228B22;
-        border: 1px solid #228B22;
+        color: #32cd32;
+        border: 1px solid #32cd32;
         padding: 8px 12px;
         border-radius: 5px;
         transition: all 0.3s;
     }
 
     .contact-links a:hover {
-        background-color: #228B22;
-        color: #fff;
+        background-color: #32cd32;
+        color: #0d1b2a;
     }
 
     footer {
         text-align: center;
         padding: 20px;
-        background-color: #4682B4;
+        background-color: #1b263b;
         color: #fff;
     }
 
