Polished portfolio with tech stack, profile styling, and contact form

--- a/index.html
+++ b/index.html
@@ -11,19 +11,10 @@
     body {
       margin: 0;
       font-family: Arial, sans-serif;
-      background: linear-gradient(270deg, #d9f0ff, #c6e7ff, #e0f7ff);
-      background-size: 600% 600%;
-      animation: gradientShift 18s ease infinite;
+      background-color: #d9f0ff; /* light blue */
       color: white;
       line-height: 1.6;
     }
-
-    @keyframes gradientShift {
-      0% { background-position: 0% 50%; }
-      50% { background-position: 100% 50%; }
-      100% { background-position: 0% 50%; }
-    }
-
     header {
       text-align: center;
       padding: 3rem 1rem;
