--- a/index.html
+++ b/index.html
@@ -1,255 +1,221 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Portfolio showcasing cybersecurity projects in threat detection, penetration testing, and secure systems.">
-  <title>Tanaka Shumba | Cybersecurity Portfolio</title>
-  <link rel="icon" href="profile.jpg">
-  <style>
-    /* ===== Global Styles ===== */
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Tanaka Shumba Portfolio</title>
+<style>
+    * { margin: 0; padding: 0; box-sizing: border-box; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;}
     body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-      background-color: #d9f0ff; /* light blue */
-      color: white;
-      line-height: 1.6;
+        background-color: #0d1b2a; /* Dark blue background */
+        color: #fff;
+        line-height: 1.6;
     }
+
     header {
-      text-align: center;
-      padding: 3rem 1rem;
+        padding: 20px;
+        text-align: center;
+        background-color: #1b263b;
     }
-    header img {
-      width: 150px;
-      height: 150px;
-      object-fit: cover;
-      border-radius: 50%;
-      border: 3px solid #39ff14; /* neon green */
-      box-shadow: 0 0 15px #39ff14;
-      margin-bottom: 1rem;
-    }
+
     header h1 {
-      font-size: 2.5rem;
-      color: #003366; /* dark blue */
-    }
-    header p {
-      font-size: 1.2rem;
-      color: #222;
+        font-size: 2.5rem;
+        color: #fff;
+        margin-bottom: 10px;
     }
 
-    /* ===== Navigation ===== */
     nav {
-      display: flex;
-      justify-content: center;
-      background: #003366;
-      padding: 0.8rem;
+        display: flex;
+        justify-content: center;
+        gap: 30px;
     }
+
     nav a {
-      color: white;
-      margin: 0 1rem;
-      text-decoration: none;
-      font-weight: bold;
-      transition: color 0.3s ease;
-    }
-    nav a:hover {
-      color: #39ff14;
+        color: #fff;
+        text-decoration: none;
+        font-weight: bold;
+        transition: color 0.3s;
     }
 
-    /* ===== Sections ===== */
+    nav a:hover { color: #32cd32; } /* Lime green on hover */
+
     section {
-      padding: 3rem 1rem;
-      max-width: 1000px;
-      margin: auto;
+        padding: 50px 20px;
+        max-width: 1000px;
+        margin: auto;
     }
+
     section h2 {
-      color: #39ff14; /* neon green */
-      margin-bottom: 1.5rem;
+        font-size: 2rem;
+        color: #32cd32; /* Lime green heading */
+        margin-bottom: 15px;
+        border-bottom: 2px solid #32cd32;
+        display: inline-block;
+        padding-bottom: 5px;
     }
 
-    /* ===== Projects ===== */
-    .projects-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-      gap: 1.5rem;
+    #about img {
+        width: 150px;
+        height: 150px;
+        border-radius: 50%;
+        margin-right: 20px;
+        border: 2px solid #32cd32;
     }
+
+    #about-content {
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+        gap: 20px;
+    }
+
+    #about-content p {
+        color: #fff;
+    }
+
+    .project-grid {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+        gap: 20px;
+    }
+
     .project-card {
-      background: rgba(0, 51, 102, 0.9); /* dark blue block */
-      padding: 1.5rem;
-      border-radius: 10px;
-      transition: transform 0.3s ease, box-shadow 0.3s ease;
+        background-color: #1b263b; /* Slightly lighter than background */
+        padding: 20px;
+        border-radius: 10px;
+        transition: transform 0.3s, box-shadow 0.3s;
     }
+
     .project-card:hover {
-      transform: translateY(-5px);
-      box-shadow: 0 0 15px #39ff14;
+        transform: translateY(-5px);
+        box-shadow: 0 0 15px #32cd32;
     }
+
     .project-card h3 {
-      margin-top: 0;
-      color: #39ff14;
+        color: #32cd32; /* Lime green title */
+        margin-bottom: 10px;
+        font-size: 1.2rem;
     }
+
     .project-card p {
-      color: #eee;
+        font-size: 0.9rem;
+        color: #fff; /* Description in white */
     }
-    .project-card small {
-      display: block;
-      margin-top: 0.5rem;
-      color: #bbb;
-    }
+
     .project-card a {
-      display: inline-block;
-      margin-top: 0.8rem;
-      color: #39ff14;
-      text-decoration: none;
-      font-weight: bold;
+        color: #32cd32;
+        text-decoration: none;
     }
+
     .project-card a:hover {
-      text-decoration: underline;
+        text-decoration: underline;
     }
 
-    /* ===== Contact Form ===== */
-    form {
-      display: flex;
-      flex-direction: column;
-      gap: 1rem;
-      background: rgba(0, 51, 102, 0.9);
-      padding: 2rem;
-      border-radius: 10px;
-    }
-    form input, form textarea {
-      padding: 0.8rem;
-      border: none;
-      border-radius: 5px;
-      font-size: 1rem;
-    }
-    form button {
-      background: #39ff14;
-      border: none;
-      padding: 0.8rem;
-      font-size: 1rem;
-      cursor: pointer;
-      border-radius: 5px;
-      font-weight: bold;
-      transition: background 0.3s ease;
-    }
-    form button:hover {
-      background: #2ecc71;
+    .contact-links a {
+        display: inline-block;
+        margin-right: 20px;
+        text-decoration: none;
+        color: #32cd32;
+        border: 1px solid #32cd32;
+        padding: 8px 12px;
+        border-radius: 5px;
+        transition: all 0.3s;
     }
 
-    /* ===== Footer ===== */
+    .contact-links a:hover {
+        background-color: #32cd32;
+        color: #0d1b2a;
+    }
+
     footer {
-      text-align: center;
-      padding: 1rem;
-      background: #003366;
-      margin-top: 2rem;
-      color: #fff;
+        text-align: center;
+        padding: 20px;
+        background-color: #1b263b;
+        color: #fff;
     }
-  </style>
+
+</style>
 </head>
 <body>
-  <!-- ===== Header ===== -->
-  <header>
-    <img src="profile.jpg" alt="Profile Picture">
+
+<header>
     <h1>Tanaka Shumba</h1>
-    <p>Cybersecurity Professional | Threat Detection | Penetration Testing | Cloud Security</p>
-  </header>
+    <nav>
+        <a href="#about">About Me</a>
+        <a href="#projects">Projects</a>
+        <a href="#contact">Contact</a>
+    </nav>
+</header>
 
-  <!-- ===== Navigation ===== -->
-  <nav>
-    <a href="#about">About</a>
-    <a href="#projects">Projects</a>
-    <a href="#contact">Contact</a>
-  </nav>
-
-  <!-- ===== About Me ===== -->
-  <section id="about">
+<section id="about">
     <h2>About Me</h2>
-    <p>Hey there! Welcome to my portfolio. Here, I showcase my cybersecurity projects, highlighting my skills in threat detection, penetration testing, and network security. Each project demonstrates practical solutions and innovative approaches to modern security challenges.</p>
-    <p>Beyond these projects, I am passionate about advancing in the cybersecurity field, constantly learning, and contributing to securing digital landscapes. This portfolio reflects both my technical expertise and my ambition to make an impact in the cybersecurity industry.</p>
-  </section>
-
-  <!-- ===== Projects ===== -->
-  <section id="projects">
-    <h2>Projects</h2>
-    <div class="projects-grid">
-      <div class="project-card">
-        <h3>Malware Analyzer</h3>
-        <p>Python script simulating suspicious file analysis for potential malicious behaviors.</p>
-        <small>Tech: Python</small>
-        <a href="https://github.com/TanakaShumba/Malware-Analyzer" target="_blank">View on GitHub</a>
-      </div>
-      <div class="project-card">
-        <h3>Ethical Hacking Sim</h3>
-        <p>Python scripts simulating ethical hacking techniques for learning and demos.</p>
-        <small>Tech: Python</small>
-        <a href="https://github.com/TanakaShumba/Ethical-Hacking-Sim" target="_blank">View on GitHub</a>
-      </div>
-      <div class="project-card">
-        <h3>Cloud Security Checker</h3>
-        <p>Python script checking cloud service configurations for common misconfigurations.</p>
-        <small>Tech: Python, AWS</small>
-        <a href="https://github.com/TanakaShumba/Cloud-Security-Checker" target="_blank">View on GitHub</a>
-      </div>
-      <div class="project-card">
-        <h3>Basic Pen Test</h3>
-        <p>Educational penetration testing tool with simple vulnerability scanning.</p>
-        <small>Tech: Python</small>
-        <a href="https://github.com/TanakaShumba/Basic-Pen-Test" target="_blank">View on GitHub</a>
-      </div>
-      <div class="project-card">
-        <h3>Simple IDS</h3>
-        <p>Basic IDS/IPS simulation for detecting and preventing attacks.</p>
-        <small>Tech: Python</small>
-        <a href="https://github.com/TanakaShumba/Simple-IDS" target="_blank">View on GitHub</a>
-      </div>
-      <div class="project-card">
-        <h3>Cybersecurity Lab Series</h3>
-        <p>A collection of labs and scripts designed for hands-on cybersecurity learning.</p>
-        <small>Tech: Python, Linux</small>
-        <a href="https://github.com/TanakaShumba/Cybersecurity-Lab-Series" target="_blank">View on GitHub</a>
-      </div>
-      <div class="project-card">
-        <h3>Secure Hospital System</h3>
-        <p>Hospital management system focusing on patient data security.</p>
-        <small>Tech: Python, SQL</small>
-        <a href="https://github.com/TanakaShumba/Secure-Hospital-System" target="_blank">View on GitHub</a>
-      </div>
-      <div class="project-card">
-        <h3>VoIP Traffic Analyzer</h3>
-        <p>Tool for capturing and analyzing VoIP RTP packets for learning.</p>
-        <small>Tech: Python, Networking</small>
-        <a href="https://github.com/TanakaShumba/VoIP-Traffic-Analyzer" target="_blank">View on GitHub</a>
-      </div>
-      <div class="project-card">
-        <h3>Python Network Scanner</h3>
-        <p>Scanner for networks to identify devices and vulnerabilities.</p>
-        <small>Tech: Python, Networking</small>
-        <a href="https://github.com/TanakaShumba/Python-Network-Scanner" target="_blank">View on GitHub</a>
-      </div>
-      <div class="project-card">
-        <h3>Healthcare System</h3>
-        <p>Healthcare management system to handle appointments, doctors, and payments.</p>
-        <small>Tech: Flask, Python, SQL</small>
-        <a href="https://github.com/TanakaShumba/Healthcare-System" target="_blank">View on GitHub</a>
-      </div>
+    <div id="about-content">
+        <img src="images/about-me.jpg" alt="Tanaka Shumba">
+        <div>
+            <p>Hi there! Welcome to my portfolio. Here, I showcase my cybersecurity projects, highlighting my skills in threat detection, penetration testing, and network security. Each project demonstrates practical solutions and innovative approaches to modern security challenges.</p>
+            <p>Beyond these projects, I am passionate about advancing in the cybersecurity field, constantly learning, and contributing to securing digital landscapes. This portfolio reflects both my technical expertise and my ambition to make an impact in the cybersecurity industry.</p>
+        </div>
     </div>
-  </section>
+</section>
 
-  <!-- ===== Contact ===== -->
-  <section id="contact">
+<section id="projects">
+    <h2>My Projects</h2>
+    <div class="project-grid">
+        <div class="project-card">
+            <h3><a href="https://github.com/TanakaShumba/malware-analyzer" target="_blank">Malware Analyzer</a></h3>
+            <p>Python script to simulate analyzing suspicious files and detecting potential malicious behaviors in a controlled environment.</p>
+        </div>
+        <div class="project-card">
+            <h3><a href="https://github.com/TanakaShumba/ethical-hacking-sim" target="_blank">Ethical Hacking Sim</a></h3>
+            <p>Python scripts simulating ethical hacking techniques for learning and demonstration purposes.</p>
+        </div>
+        <div class="project-card">
+            <h3><a href="https://github.com/TanakaShumba/cloud-security-checker" target="_blank">Cloud Security Checker</a></h3>
+            <p>Python script to simulate checking cloud service configurations for common security misconfigurations.</p>
+        </div>
+        <div class="project-card">
+            <h3><a href="https://github.com/TanakaShumba/basic-pen-test" target="_blank">Basic Pen Test</a></h3>
+            <p>Simple Python script for educational penetration testing and vulnerability scanning.</p>
+        </div>
+        <div class="project-card">
+            <h3><a href="https://github.com/TanakaShumba/simple-ids" target="_blank">Simple IDS</a></h3>
+            <p>A basic IDS/IPS simulation in Python for detecting and preventing attacks.</p>
+        </div>
+        <div class="project-card">
+            <h3><a href="https://github.com/TanakaShumba/cybersecurity-lab-series" target="_blank">Cybersecurity Lab Series</a></h3>
+            <p>A collection of labs and scripts designed for hands-on cybersecurity learning.</p>
+        </div>
+        <div class="project-card">
+            <h3><a href="https://github.com/TanakaShumba/secure-hospital-system" target="_blank">Secure Hospital System</a></h3>
+            <p>Python-based secure hospital management system focusing on patient data security.</p>
+        </div>
+        <div class="project-card">
+            <h3><a href="https://github.com/TanakaShumba/voip-traffic-analyzer" target="_blank">VoIP Traffic Analyzer</a></h3>
+            <p>Python project that captures and analyzes VoIP RTP packets safely for educational use.</p>
+        </div>
+        <div class="project-card">
+            <h3><a href="https://github.com/TanakaShumba/python-network-scanner" target="_blank">Python Network Scanner</a></h3>
+            <p>Python tool for scanning networks and identifying connected devices and vulnerabilities.</p>
+        </div>
+        <div class="project-card">
+            <h3><a href="https://github.com/TanakaShumba/Healthcare_System" target="_blank">Healthcare System</a></h3>
+            <p>Flask-based healthcare management system to handle appointments, doctors, and payments.</p>
+        </div>
+    </div>
+</section>
+
+<section id="contact">
     <h2>Contact Me</h2>
-    <form action="mailto:tanakashumba04@gmail.com" method="post" enctype="text/plain">
-      <input type="text" name="name" placeholder="Your Name" required>
-      <input type="email" name="email" placeholder="Your Email" required>
-      <textarea name="message" placeholder="Your Message" rows="5" required></textarea>
-      <button type="submit">Send Message</button>
-    </form>
-    <p style="text-align:center; margin-top:1rem;">
-      Or connect via <a href="https://linkedin.com/in/tanakashumba-" target="_blank" style="color:#39ff14;">LinkedIn</a>
-    </p>
-  </section>
+    <p>Feel free to reach out via email or LinkedIn:</p>
+    <div class="contact-links">
+        <a href="mailto:tanakashumba04@gmail.com">Email Me</a>
+        <a href="https://www.linkedin.com/in/tanakashumba-" target="_blank">LinkedIn</a>
+    </div>
+</section>
 
-  <!-- ===== Footer ===== -->
-  <footer>
+<footer>
     <p>© 2025 Tanaka Shumba</p>
-  </footer>
+</footer>
+
 </body>
 </html>
